--- a/admin_login.html
+++ b/admin_login.html
@@ -96,7 +96,7 @@
             <button type="submit">🔑 Admin Login</button>
         </form>
         <div class="links">
-            <p><a href="/create_admin">⚙️ Create Default Admin</a></p>
+            <p><a href="admin_register.html">⚙️ Create Default Admin</a></p>
             <p><a href="/">← Back to Home</a></p>
         </div>
     </div>
