--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         <div style="text-align: center;">
             <p style="margin-bottom: 30px; color: white; font-size: 22px; font-weight: 500;">Welcome! Choose an option to continue:</p>
             <div class="actions">
-                <a class="button" href="/user_login">User Login</a>
-                <a class="button outline" href="/admin/login">Admin Login</a>
+                <a class="button" href="user_login.html">User Login</a>
+                <a class="button outline" href="admin_login.html">Admin Login</a>
+                <a class="button secondary" href="files.html">📁 View All Files</a>
             </div>
         </div>
     </main>
