Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <h1 style="margin: 0 0 20px 0; font-size: 28px; color: #333;">Welcome!</h1>
             <p style="margin-bottom: 30px; color: #666; font-size: 18px; line-height: 1.5;">Choose an option to continue and start managing customer feedback effectively.</p>
             <div class="actions">
-                <a class="button" href="user_login.html">👤 User Login</a>
-                <a class="button outline" href="admin_login.html">🔧 Admin Login</a>
+                <a class="button" href="/user_login">👤 User Login</a>
+                <a class="button outline" href="/admin/login">🔧 Admin Login</a>
             </div>
         </div>
     </main>
