Modify admin login form for demo mode
Updated form submission to alert demo mode message.

--- a/admin_login.html
+++ b/admin_login.html
@@ -76,7 +76,7 @@
 <body>
     <div class="wrap">
         <h1>🔧 Admin Access</h1>
-        <form method="post">
+        <form onsubmit="alert('Demo mode - Login functionality requires backend server'); return false;">
             <label>Username
                 <input type="text" name="username" placeholder="Enter admin username" required>
             </label>
