--- a/create_admin.html
+++ b/create_admin.html
@@ -77,7 +77,7 @@
         <div class="info">
             This will create a default admin account with username: <strong>admin</strong> and password: <strong>admin123</strong>
         </div>
-        <form onsubmit="alert('Demo mode - Admin creation functionality requires backend server'); return false;">
+        <form>
             <label>Admin Username
                 <input type="text" name="username" value="admin" placeholder="Enter admin username" required>
             </label>
