--- a/user_login.html
+++ b/user_login.html
@@ -70,7 +70,7 @@
 <body>
     <div class="wrap">
         <h1>👤 User Login</h1>
-        <form onsubmit="alert('Demo mode - Login functionality requires backend server'); return false;">
+        <form>
             <label>Username
                 <input type="text" name="username" placeholder="Enter your username" required>
             </label>
