--- a/register.html
+++ b/register.html
@@ -67,7 +67,7 @@
 <body>
     <div class="wrap">
         <h1>✨ Create Account</h1>
-        <form onsubmit="alert('Demo mode - Registration functionality requires backend server'); return false;">
+        <form>
             <label>Username
                 <input type="text" name="username" placeholder="Choose a unique username" required>
             </label>
