--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -129,20 +129,10 @@
                 </thead>
                 <tbody id="feedbackTableBody">
                     <tr><td colspan="7" style="text-align: center; padding: 40px; color: #6b7280;">Select a user to view their feedback</td></tr>
-                </tbody>background: #10b981; color: white; margin: 0 2px;" onclick="viewDetails(3)">👁️ View</button>
-                            <button class="btn btn-danger btn-sm" onclick="return confirm('Delete this feedback?')">🗑️ Delete</button>
-                        </td>
-                    </tr>
-                    <tr data-content="The mobile app crashes frequently when I try to upload photos. This happens on both iOS and Android devices. Please fix this issue as it's affecting my daily workflow.">
-                        <td>david_kim</td>
-                        <td>Mobile App Stability</td>
-                        <td>Product</td>
-                        <td>⭐ 2/5</td>
-                        <td><span class="badge badge-pending">Pending</span></td>
-                        <td>2024-01-15</td>
-                        <td>
-                            <button class="btn btn-primary btn-sm" onclick="showResponse(4)">💬 Respond</button>
-                            <button class="btn btn-sm" style="background: #10b981; color: white; margin: 0 2px;" onclick="viewDetails(4)">👁️ View</button>
+                </tbody>
+            </table>
+        </div>
+    </div>tn-sm" style="background: #10b981; color: white; margin: 0 2px;" onclick="viewDetails(4)">👁️ View</button>
                             <button class="btn btn-danger btn-sm" onclick="return confirm('Delete this feedback?')">🗑️ Delete</button>
                         </td>
                     </tr>
